[Maintain] to generate exam use by Deepseek